[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniz_oxide = "0.4.4"
crc32fast = "1.3.2"
wasm-bindgen = "0.2.80"

[dev-dependencies]
insta = "1.13.0"
test-case = "2.0.2"
image = "0.24.2"