[package]
name = "wasm-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"
core = { path = "../core" }
js-sys = "0.3.45"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

